--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
-#Wed Feb 02 12:41:38 CET 2011
+#Thu Feb 03 09:58:00 CET 2011
 eclipse.preferences.version=1
+encoding//sermepa/admin.py=utf-8
 encoding//sermepa/models.py=utf-8
 encoding//sermepa/tests.py=utf-8
 encoding//sermepa/views.py=utf-8
