--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,8 @@
 eclipse.preferences.version=1
+encoding//django-sermepa/sermepa/admin.py=utf-8
 encoding//django-sermepa/sermepa/forms.py=utf-8
 encoding//django-sermepa/sermepa/models.py=utf-8
 encoding//django-sermepa/sermepa/tests.py=utf-8
+encoding//django-sermepa/sermepa/utils.py=utf-8
 encoding//django-sermepa/sermepa/views.py=utf-8
 encoding//django-sermepa/sermepa_test/views.py=utf-8
